# opinion

./: .gitignore  Cargo.toml  README.md  build-web.sh  index.html  src.rs  vercel.json  vercel.sh
api/: Cargo.toml  getmsg.rs  hello.rs
api/.cargo/: config.toml
opinion/: Cargo.toml
opinion/src/: main.rs
public/: index.html
src/: main.rs
