[package]
name = "opinion"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"] }
vercel_runtime = "1.1.6"

[[bin]]
name = "api-hello"
path = "api/hello.rs"