[package]
name = "opinion"
version = "0.1.0"
edition = "2024"


[dependencies]
# getrandom = { version = "0.3.4", features= ["wasm_js"] }
macroquad = "0.4.14"
# rand = "0.9.2"
# wasm-bindgen = "0.2.104"

# This dependency is used only when NOT compiling for wasm32
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rdev = "0.5.3"

